# anhyzer-api

./: .gitignore  LICENSE  README.md  anhyzer-api.cabal  anhyzer-api.sql  anhyzer.cfg.example  deploy.sh
scripts/: db_reset.sh
snaplets/api/snaplets/scorecards/snaplets/postgresql-simple/: devel.cfg
src/: Main.hs  SimpleAuth.hs
src/Anhyzer/: Model.hs  Types.hs  Util.hs
src/Anhyzer/Web/: App.hs  Server.hs
src/Anhyzer/Web/Actions/: Scorecard.hs
src/Api/: Authentication.hs  Core.hs  Types.hs
src/Api/Services/: ScorecardService.hs
src/Middleware/: SimpleAuth.hs
