name:                anhyzer-api
version:             0.1.0.0
synopsis:            Anhyzer API
description:         API for Anhyzer application.
homepage:            https://github.com/keveri/anhyzer-api
license:             MIT
license-file:        LICENSE
author:              Matias Keveri
maintainer:          matias@keveri.fi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable anhyzer-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
     aeson               ==0.7.*,
     base                >=4.6 && <4.7,
     bytestring          ==0.10.*,
     case-insensitive    ==1.1.*,
     configurator        ==0.3.*,
     http-types          ==0.8.*,
     monad-logger        ==0.3.*,
     persistent          ==2.1.*,
     persistent-sqlite   ==2.1.*,
     persistent-template ==2.1.*,
     resourcet,
     Spock               >=0.7.9,
     text                >=0.11.3.1 && <1.3,
     time                ==1.4.*,
     transformers        ==0.3.*,
     wai                 ==3.0.*,
     wai-extra           ==3.0.*

  ghc-options: -threaded -Wall -fwarn-tabs -O2

